--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,84 @@ main {
     margin-right: 5px;
 }
 
+/* __________________ */
+/* post (detalhes) */
+
+#post-container {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: auto;
+    grid-template-areas: "main sidebar";
+    grid-gap: 10px;
+    padding-top: 30px;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 250px;
+}
+
+    .content-container {
+        grid-area: main;
+}
+
+#post-description {
+    font-style: italic;
+    margin-bottom: 40px;
+}
+
+.post-content {
+    line-height: 1.8;
+    margin: 10px 0;
+}
+
+/* post sidebar */
+
+.nav-container {
+    grid-area: sidebar;
+}
+
+#main-title {
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+
+.img-container {
+    margin-bottom: 30px;
+}
+
+.img-container img {
+    width: 60%;
+}
+
+/* post aside */
+
+#tags-title, #categories-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    background-color: #000;
+    text-align: center;
+    color: #fff;
+    padding: 10px;
+    font-weight: 300;
+}
+
+#tag-list, #categories-list {
+    list-style: none;
+}
+
+#tag-list li, #categories-list li {
+    margin-bottom: 10px;
+}
+
+#tag-list a, #categories-list a {
+    color: #666;
+    transition: .5s;
+}
+
+#tag-list a:hover, #categories-list a:hover {
+    color: #000;
+}
+
+
 footer {
     width: 100%;
     position: absolute;
@@ -124,4 +202,51 @@ footer {
     background: #000;
     color: #fff;
     padding: 50px 0;
+}
+
+/* responsividade */
+
+@media(max-width: 576px) {
+    header {
+        width: 100%;
+    }
+
+    #logo {
+        display: block;
+        width: 50px;
+        position: relative;
+        margin: 0 auto;
+        left: 0;
+    }
+
+    #navbar {
+        display: none;
+    }
+
+    #title-container {
+        min-width: 100%;
+        margin-top: 20px;
+    }
+
+    #posts-container {
+        margin-top: 20px;
+    }
+
+    .post-box {
+        flex: 100% 1 0;
+        padding: 15px;
+        margin: 0;
+    }
+
+    #post-container {
+        grid-template-columns: 100%;
+        padding: 15px;
+        grid-template-areas: 
+        "main"
+        "sidebar";
+    }
+
+    .img-container img {
+        width: 100%;
+    }
 }
